--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"engines": {
+		"node": "14.15.3",
+		"npm": "6.14.9"
+	},
 	"scripts": {
 		"start": "node index.js",
 		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
